# agent-communication-and-tool-selection-framework

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  agent-integration-guide.md  docker-compose.gateway.yaml  run.ps1  run.sh
a2a/include/a2a/: llm_client.hpp
a2a/include/a2a/examples/: agent_registry.hpp  http_server.hpp
a2a/src/core/: http_client.cpp
a2a_adapter/include/agent_rpc/a2a_adapter/: a2a_adapter.h  error_mapper.h
a2a_adapter/src/: a2a_adapter.cpp  error_mapper.cpp
client/: CMakeLists.txt
client/include/agent_rpc/client/: agent_auto_registrar.h  rpc_client.h
client/src/: agent_auto_registrar.cpp  ai_query_client.cpp  main.cpp  rpc_client.cpp
common/: CMakeLists.txt
common/include/agent_rpc/common/: memory_service.h  redis_client.h  types.h
common/src/: memory_service.cpp  redis_client.cpp  serializer.cpp
docs/: architecture.md  deployment.md  rag-mcp-guide.md
docs/NexusAI/: embedding-routing-benchmark.md
examples/: rpc_mcp_integration_test.cpp
examples/ai_orchestrator/: CMakeLists.txt  math_agent_main.cpp  orchestrator_main.cpp  registry_server_main.cpp  start_system.sh
examples/grpc_ai_demo/: grpc_server_main.cpp  start_server.sh
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: style.css
frontend/src/components/: AgentBadge.vue  AgentCard.vue  ExecutionPlan.vue  MessageBubble.vue  StreamingText.vue
frontend/src/router/: index.ts
frontend/src/services/: grpc-client.ts
frontend/src/stores/: agents.ts  auth.ts  chat.ts
frontend/src/types/: proto.ts
frontend/src/views/: AdminView.vue  ChatView.vue  LoginView.vue
gateway/: envoy.sh  envoy.yaml  grpcwebproxy.sh  nginx.conf
mcp/include/agent_rpc/mcp/: mcp_agent_integration.h
mcp/include/agent_rpc/mcp/rag/: embedding_service.h
mcp/src/: mcp_agent_integration.cpp  mcp_client.cpp
mcp/src/rag/: embedding_service.cpp
mcp_server_integrated/: CMakeLists.txt
mcp_server_integrated/plugins/bacio-quote/: CMakeLists.txt
mcp_server_integrated/plugins/calculator/: CMakeLists.txt
mcp_server_integrated/plugins/code-review/: CMakeLists.txt
orchestrator/: CMakeLists.txt
orchestrator/include/agent_rpc/orchestrator/: agent_info.h  agent_router.h  result_aggregator.h  task_executor.h  task_planner.h
orchestrator/src/: agent_info.cpp  agent_router.cpp  result_aggregator.cpp  task_executor.cpp  task_planner.cpp
proto/: CMakeLists.txt  agent_service.proto  ai_query.proto  common.proto  user.proto
server/: CMakeLists.txt
server/include/agent_rpc/server/: agent_service.h  ai_query_service.h  auth_interceptor.h  auth_service.h  rpc_server.h
server/src/: agent_service.cpp  ai_query_service.cpp  auth_interceptor.cpp  auth_service.cpp  main.cpp  rpc_server.cpp
src/: circuit_breaker.cpp  metrics.cpp  rpc_client.cpp  rpc_framework.cpp
tests/: CMakeLists.txt  test_agent_router_properties.cpp  test_redis_services.cpp  test_rpc_framework.cpp  test_task_manager_properties.cpp
